--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
-    <header style="background-color: #cc2727;">
-        <h1>Left 4 dead 2 - Sorteo de Equipos</h1>
+    <header  class="row letra col-12 p-2 " style="background-color: #000000;">
+
+        <h1 style="color: white;">Left 4 dead 2 - Sorteo de Equipos</h1>
     </header>
-    <main>
-        <section class="">
+    <main class="" style="background-color: rgb(31, 31, 34);">
+        <section class="col-12">
             <h1>Registro de Jugador</h1>
             <form id="formulario">
                 <label for="jugador">Nombre de Jugador</label>
