--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,65 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L4D2 Sorteo</title>
+    <title>L4D2 - Sorteo de Equipos</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
-<body>
-    <header  class="row letra col-12 p-2 " style="background-color: #000000;">
+<body class="bg-dark text-light">
 
-        <h1 style="color: white;">Left 4 dead 2 - Sorteo de Equipos</h1>
+    <!-- HEADER -->
+    <header class="bg-black p-3 mb-4">
+        <div class="container">
+            <h1 class="text-center text-white">
+                Left 4 Dead 2 – Sorteo de Equipos
+            </h1>
+        </div>
     </header>
-    <main class="" style="background-color: rgb(31, 31, 34);">
-        <section class="col-12">
-            <h1>Registro de Jugador</h1>
-            <form id="formulario">
-                <label for="jugador">Nombre de Jugador</label>
-                <input type="text" name="jugador" id="jugador" placeholder="Jugador">
-                <!-- nivel de habilidad edel 1 al 10  no se ingresa sino es como un scrol-->
-                <label for="nivel">Nivel de Habilidad</label>
-                <input type="range" name="nivel" id="nivel" min="1" max="10">
+
+    <!-- MAIN -->
+    <main class="container">
+
+        <!-- REGISTRO -->
+        <section class="mb-5">
+            <h2 class="mb-3">Registro de Jugador</h2>
+
+            <form id="formulario" class="row g-3">
+                <div class="col-md-6">
+                    <label for="jugador" class="form-label">Nombre del Jugador</label>
+                    <input 
+                        type="text" 
+                        id="jugador" 
+                        class="form-control" 
+                        placeholder="Ej: Player01"
+                        required
+                    >
+                </div>
+
+                <div class="col-md-6">
+                    <label for="nivel" class="form-label">
+                        Nivel de Habilidad (1–10)
+                    </label>
+                    <input 
+                        type="range" 
+                        id="nivel" 
+                        class="form-range" 
+                        min="1" 
+                        max="10"
+                    >
+                </div>
+
+                <div class="col-12">
+                    <button type="button" id="agregar" class="btn btn-success">
+                        Registrarse
+                    </button>
+                </div>
             </form>
-            <button id="agregar">Registrarse</button>
-            
-            <div id="jugadores"></div>
         </section>
-        <!-- jugadores registrados -->
-        <section>   
-            <div>
-                <h1>Jugadores Registrados</h1>
-            </div>
-            <div>
-                <!-- hola -->
-                 <h1>o</h1>
-                <ul id="jugadores-registrados"></ul>
-            </div>
+
+        <!-- JUGADORES REGISTRADOS -->
+        <section class="mb-5">
+            <h2 class="mb-3">Jugadores Registrados</h2>
+            <ul id="jugadores-registrados" class="list-group">
+                <!-- JS insertará jugadores aquí -->
+            </ul>
         </section>
-        <!-- cola de jugadores para el sorte y ingresar  -->
-        <section>
-            <div>
-                <h1>Cola de Jugadores</h1>
-                <button>Sortear</button>
+
+        <!-- COLA Y SORTEO -->
+        <section class="mb-5">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h2>Cola de Jugadores</h2>
+                <button id="sortear" class="btn btn-warning">
+                    Sortear
+                </button>
             </div>
-            <div>
-                <ul id="cola-jugadores"></ul>
-                <!-- ejemplo de lista de jugadores y su mmr  -->
-                <li>jugador 1 - mmr 10</li>
-                <li>jugador 2 - mmr 9</li>
-                <li>jugador 3 - mmr 8</li>
-                <li>jugador 4 - mmr 7</li>
-                <li>jugador 5 - mmr 6</li>
-                <li>jugador 6 - mmr 5</li>
-                <li>jugador 7 - mmr 4</li>
-                <li>jugador 8 - mmr 3</li>
-                <li>jugador 9 - mmr 2</li>
-                <li>jugador 10 - mmr 1</li>
-            </div>
-            <button>ingresar</button>
+
+            <ul id="cola-jugadores" class="list-group mb-3">
+                <!-- Ejemplo (luego borrar con JS) -->
+                <li class="list-group-item bg-secondary text-white">Jugador 1 - MMR 10</li>
+                <li class="list-group-item bg-secondary text-white">Jugador 2 - MMR 9</li>
+                <li class="list-group-item bg-secondary text-white">Jugador 3 - MMR 8</li>
+            </ul>
+
+            <button id="ingresar" class="btn btn-primary">
+                Ingresar a la cola
+            </button>
         </section>
+
     </main>
 
 </body>
