--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,6 +65,9 @@
         <section class="mb-5">
             <h2 class="mb-3">Jugadores Registrados</h2>
             <ul id="jugadores-registrados" class="list-group">
+                <li class="list-group-item bg-secondary text-white">Jugador 1 - MMR 10</li>
+                <li class="list-group-item bg-secondary text-white">Jugador 2 - MMR 9</li>
+                <li class="list-group-item bg-secondary text-white">Jugador 3 - MMR 8</li>
                 <!-- JS insertará jugadores aquí -->
             </ul>
         </section>
